add relatorios de clientes e produtos

--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -48,6 +48,17 @@
 				<li><a href="/Cliente/Index"><span class="lbl">Clientes</span></a></li>
 				<li><a href="/Home/Index"><span class="lbl">Home</span></a></li>				
 			</ul>
-		</li>		
+		</li>	
+        <li class="purple with-sub">
+            <span>
+                <i class="font-icon font-icon-edit"></i>
+                <span class="lbl">Relatórios</span>
+            </span>
+            <ul>
+                <li><a href="/Cliente/Relatorio"><span class="lbl">Relatório de Clientes</span></a></li>
+                <li class="divider"></li>
+                <li><a href="/Produto/Relatorio"><span class="lbl">Relatório de Produtos</span></a></li>                
+            </ul>
+        </li>
 	</ul>
 </nav><!--.side-menu-->
