--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -30,25 +30,25 @@
 <div class="mobile-menu-left-overlay"></div>
 
 <nav class="side-menu">
-	<ul class="side-menu-list">
-		<li class="brown opened">
-			<a href="/Dashboard/Index">
-				<i class="font-icon font-icon-chart"></i>
-				<span class="lbl">Dashboard</span>
-			</a>
-		</li>
-		<li class="purple with-sub">
-			<span>
-				<i class="font-icon font-icon-edit"></i>
-				<span class="lbl">Cadastros</span>
-			</span>
-			<ul>
-				<li><a href="/Account/Index"><span class="lbl">Usuario</span></a></li>
-				<li class="divider"></li>
-				<li><a href="/Cliente/Index"><span class="lbl">Clientes</span></a></li>
-				<li><a href="/Home/Index"><span class="lbl">Home</span></a></li>				
-			</ul>
-		</li>	
+    <ul class="side-menu-list">
+        <li class="brown opened">
+            <a href="/Dashboard/Index">
+                <i class="font-icon font-icon-chart"></i>
+                <span class="lbl">Dashboard</span>
+            </a>
+        </li>
+        <li class="purple with-sub">
+            <span>
+                <i class="font-icon font-icon-edit"></i>
+                <span class="lbl">Cadastros</span>
+            </span>
+            <ul>
+                <li><a href="/Account/Index"><span class="lbl">Usuario</span></a></li>
+                <li class="divider"></li>
+                <li><a href="/Cliente/Index"><span class="lbl">Clientes</span></a></li>
+                <li><a href="/Home/Index"><span class="lbl">Home</span></a></li>
+            </ul>
+        </li>
         <li class="purple with-sub">
             <span>
                 <i class="font-icon font-icon-edit"></i>
@@ -57,8 +57,17 @@
             <ul>
                 <li><a href="/Cliente/Relatorio"><span class="lbl">Relatório de Clientes</span></a></li>
                 <li class="divider"></li>
-                <li><a href="/Produto/Relatorio"><span class="lbl">Relatório de Produtos</span></a></li>                
+                <li><a href="/Produto/Relatorio"><span class="lbl">Relatório de Produtos</span></a></li>
             </ul>
         </li>
-	</ul>
+        <li class="purple with-sub">
+            <span>
+                <i class="font-icon font-icon-edit"></i>
+                <span class="lbl">Caixa</span>
+            </span>
+            <ul>
+                <li><a href="/Caixa/FechamentoDiario"><span class="lbl">Fechamento Diário</span></a></li>                
+            </ul>
+        </li>
+    </ul>
 </nav><!--.side-menu-->
