add resumo financeiro mensal

--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -30,14 +30,24 @@
 <div class="mobile-menu-left-overlay"></div>
 
 <nav class="side-menu">
-    <ul class="side-menu-list">       
+    <ul class="side-menu-list">
         <li class="purple with-sub">
             <span>
                 <i class="font-icon font-icon-edit"></i>
                 <span class="lbl">Caixa</span>
             </span>
             <ul>
-                <li><a href="~/Caixa/FechamentoDiario"><span class="lbl">Fechamento Diário</span></a></li>                
+                <li><a href="~/Caixa/FechamentoDiario"><span class="lbl">Fechamento Diário</span></a></li>
+            </ul>
+        </li>
+
+        <li class="purple with-sub">
+            <span>
+                <i class="font-icon font-icon-edit"></i>
+                <span class="lbl">Venda</span>
+            </span>
+            <ul>
+                <li><a href="~/Venda/Index"><span class="lbl">Balanço Mensal</span></a></li>
             </ul>
         </li>
     </ul>
