--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -1,54 +1,75 @@
 ﻿<header class="site-header">
-	<div class="container-fluid">        
+    <div class="container-fluid">
         <a href="#" class="site-logo">
-            <img class="hidden-md-down" src="~/Content/img/log-comfacil.png" alt="">            
+            <img class="hidden-md-down" src="~/Content/img/log-comfacil.png" alt="">
         </a>
-		<button id="show-hide-sidebar-toggle" class="show-hide-sidebar">
-			<span>toggle menu</span>
-		</button>
-		<div class="site-header-content">
-			<div class="site-header-content-in pull-right">
-				<div class="site-header-show">
-					<div class="dropdown user-menu">
-						<button class="dropdown-toggle" id="dd-user-menu" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<img src="~/Content/img/avatar-2-64.png" alt="">
-						</button>
-						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd-user-menu">
-							@*<a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-user"></span>Profile</a>
-								<a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-cog"></span>Settings</a>
-								<a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-question-sign"></span>Help</a>
-								<div class="dropdown-divider"></div>*@
-							<a class="dropdown-item" href="/Account/LogOff"><span class="font-icon glyphicon glyphicon-log-out"></span>Logout</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+        <button id="show-hide-sidebar-toggle" class="show-hide-sidebar">
+            <span>toggle menu</span>
+        </button>
+        <div class="site-header-content">
+            <div class="site-header-content-in pull-right">
+                <div class="site-header-show">
+                    <div class="dropdown user-menu">
+                        <button class="dropdown-toggle" id="dd-user-menu" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img src="~/Content/img/avatar-2-64.png" alt="">
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd-user-menu">
+                            @*<a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-user"></span>Profile</a>
+                                <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-cog"></span>Settings</a>
+                                <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-question-sign"></span>Help</a>
+                                <div class="dropdown-divider"></div>*@
+                            <a class="dropdown-item" href="/Account/LogOff"><span class="font-icon glyphicon glyphicon-log-out"></span>Logout</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
 
 <div class="mobile-menu-left-overlay"></div>
 
 <nav class="side-menu">
     <ul class="side-menu-list">
+        @*<li class="purple with-sub">
+                <span>
+                    <i class="font-icon font-icon-edit"></i>
+                    <span class="lbl">Caixa</span>
+                </span>
+                <ul>
+                    <li><a href="~/Caixa/FechamentoDiario"><span class="lbl">Fechamento Diário</span></a></li>
+                </ul>
+            </li>*@
+
+        @*<li class="purple with-sub">
+                <span>
+                    <i class="font-icon font-icon-edit"></i>
+                    <span class="lbl">Venda</span>
+                </span>
+                <ul>
+                    <li><a href="~/Venda/BalancoMensal"><span class="lbl">Balanço Mensal</span></a></li>
+                </ul>
+                <ul>
+                    <li><a href="~/Venda/DebitosAReceber"><span class="lbl">Débitos a Receber</span></a></li>
+                </ul>
+            </li>*@
+
         <li class="purple with-sub">
-            <span>
-                <i class="font-icon font-icon-edit"></i>
-                <span class="lbl">Caixa</span>
-            </span>
-            <ul>
-                <li><a href="~/Caixa/FechamentoDiario"><span class="lbl">Fechamento Diário</span></a></li>
-            </ul>
+            <a href="~/Venda/BalancoMensal">
+                <span class="lbl">
+                    <i class="font-icon font-icon-edit"></i>
+                    <span class="lbl">Balanço Mensal</span>
+                </span>
+            </a>
         </li>
 
         <li class="purple with-sub">
-            <span>
-                <i class="font-icon font-icon-edit"></i>
-                <span class="lbl">Venda</span>
-            </span>
-            <ul>
-                <li><a href="~/Venda/Index"><span class="lbl">Balanço Mensal</span></a></li>
-            </ul>
+            <a href="~/Venda/DebitosAReceber">
+                <span class="lbl">
+                    <i class="font-icon font-icon-edit"></i>
+                    <span class="lbl">Débitos a Receber</span>
+                </span>
+            </a>
         </li>
     </ul>
 </nav>
