--- a/ModeloAspNetMvc/Views/Venda/BalancoMensal.cshtml
+++ b/ModeloAspNetMvc/Views/Venda/BalancoMensal.cshtml
@@ -8,7 +8,7 @@
     <div class="tbl">
         <div class="tbl-row">
             <div class="tbl-cell">
-                <h3>Caixa</h3>
+                <h3>Vendas</h3>
                 <ol class="breadcrumb breadcrumb-simple">
                     <li><a href="#">ComFacil</a></li>
                     <li><a href="#">Vendas</a></li>
@@ -21,24 +21,21 @@
 
 
 <section class="card box-block">
-    <div class="card-block">
-        @using (Html.BeginForm("BalancoMensal", "Venda", FormMethod.Get, new { @id = "formPesquisaBalancoMensal" }))
-        {
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.FiltroMesAno)
-                        @Html.TextBox("FiltroMesAno", Model.FiltroMesAno, new { @class = "form-control", @id = "FiltroMesAno" })
-                    </div>
-                </div>
-
-                <div class="col-md-9 text-right">
-                    <div class="form-group">
-                        <input type="submit" value="Consultar" class="btn btn-primary" />
-                    </div>
+    <div class="card-block">                
+        <div class="row">
+            <div class="col-md-3">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.FiltroMesAno)
+                    @Html.TextBox("FiltroMesAno", Model.FiltroMesAno, new { @class = "form-control", @id = "FiltroMesAno" })
                 </div>
             </div>
-        }
+
+            <div class="col-md-9 text-right">
+                <div class="form-group">
+                    <input type="button" value="Consultar" class="btn btn-primary" onclick="buscarResumoMensalVendas()"/>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="card-block">
@@ -46,44 +43,94 @@
             <table class="table table-bordered">
                 <tr class="table-info">
                     <th class="text-center">
-                        <strong style="font-size: 25px;">Vendas: @Html.ValueFor(Model=> Model.ValorTotalEmVendas)</strong>                        
+                        <strong style="font-size: 20px;">Vendas: @Html.TextBoxFor(model => model.ValorTotalEmVendas, new { @readonly = "readonly" })</strong>                        
                     </th>
-                    <th class="text-center"><strong style="font-size: 25px;">Capital: @Html.ValueFor(Model => Model.ValorTotalEmPagamentosRecebidos)</strong></th>
+                    <th class="text-center"><strong style="font-size: 20px;">Capital: @Html.TextBoxFor(Model => Model.ValorTotalEmPagamentosRecebidos, new { @readonly = "readonly" })</strong></th>
                 </tr>
                 <tr>
-                    <td rowspan="4"><strong style="font-size: 20px;">À Vista:</strong> @Html.ValueFor(Model => Model.ValorDasVendasAVista)</td>
-                    <td><strong style="font-size: 20px;">À Vista:</strong> @Html.ValueFor(Model => Model.ValorTotalDosPagsRecebidosAVista)</td>
-                </tr>
-
-                <tr>
-                    <td class="text-center"><strong style="font-size: 18px;">Cartão:</strong>@Html.ValueFor(Model => Model.ValorDosPagsRecebidosAVistaNoCartao)</td>
+                    <td rowspan="4"><strong style="font-size: 18px;">À Vista:</strong> @Html.TextBoxFor(Model => Model.ValorDasVendasAVista, new { @readonly = "readonly" })</td>
+                    <td><strong style="font-size: 18px;">À Vista:</strong> @Html.TextBoxFor(Model => Model.ValorTotalDosPagsRecebidosAVista, new { @readonly = "readonly" })</td>
                 </tr>
 
                 <tr>
-                    <td class="text-center"><strong style="font-size: 18px;">Dinheiro:</strong>@Html.ValueFor(Model => Model.ValorDosPagsRecebidosAVistaNoCheque)</td>
+                    <td class="text-center"><strong style="font-size: 16px;">Cartão:</strong>@Html.TextBoxFor(Model => Model.ValorDosPagsRecebidosAVistaNoCartao, new { @readonly = "readonly" })</td>
                 </tr>
 
                 <tr>
-                    <td class="text-center"><strong style="font-size: 18px;">Cheque:</strong>@Html.ValueFor(Model => Model.ValorDosPagsRecebidosAVistaNoDinheiro)</td>
+                    <td class="text-center"><strong style="font-size: 16px;">Dinheiro:</strong>@Html.TextBoxFor(Model => Model.ValorDosPagsRecebidosAVistaNoDinheiro, new { @readonly = "readonly" })</td>
                 </tr>
 
                 <tr>
-                    <td rowspan="4"><strong style="font-size: 20px;">À Prazo:</strong> @Html.ValueFor(Model => Model.ValorDasVendasAPrazo)</td>
-                    <td><strong style="font-size: 20px;">Em Prestações:</strong> @Html.ValueFor(Model => Model.ValorTotalEmPrestacoesRecebidas)</td>
+                    <td class="text-center"><strong style="font-size: 16px;">Cheque:</strong>@Html.TextBoxFor(Model => Model.ValorDosPagsRecebidosAVistaNoCheque, new { @readonly = "readonly" })</td>
                 </tr>
 
                 <tr>
-                    <td class="text-center"><strong style="font-size: 18px;">Cartão:</strong>@Html.ValueFor(Model => Model.ValorDasPrestacoesRecebidasNoCartao)</td>
+                    <td rowspan="4"><strong style="font-size: 18px;">À Prazo:</strong> @Html.TextBoxFor(Model => Model.ValorDasVendasAPrazo, new { @readonly = "readonly" })</td>
+                    <td><strong style="font-size: 18px;">Em Prestações:</strong> @Html.TextBoxFor(Model => Model.ValorTotalEmPrestacoesRecebidas, new { @readonly = "readonly" })</td>
                 </tr>
 
                 <tr>
-                    <td class="text-center"><strong style="font-size: 18px;">Dinheiro:</strong>@Html.ValueFor(Model => Model.ValorDasPrestacoesRecebidasNoDinheiro)</td>
+                    <td class="text-center"><strong style="font-size: 16px;">Cartão:</strong>@Html.TextBoxFor(Model => Model.ValorDasPrestacoesRecebidasNoCartao, new { @readonly = "readonly" })</td>
                 </tr>
 
                 <tr>
-                    <td class="text-center"><strong style="font-size: 18px;">Cheque:</strong>@Html.ValueFor(Model => Model.ValorDasPrestacoesRecebidasNoCheque)</td>
+                    <td class="text-center"><strong style="font-size: 16px;">Dinheiro:</strong>@Html.TextBoxFor(Model => Model.ValorDasPrestacoesRecebidasNoDinheiro, new { @readonly = "readonly" })</td>
+                </tr>
+
+                <tr>
+                    <td class="text-center"><strong style="font-size: 16px;">Cheque:</strong>@Html.TextBoxFor(Model => Model.ValorDasPrestacoesRecebidasNoCheque, new { @readonly = "readonly" })</td>
                 </tr>
             </table>
         </div>        
     </div>    
 </section>
+
+<script type="text/javascript">
+
+    function buscarResumoMensalVendas() {
+
+        var parametro = {
+            mesAno: $('#FiltroMesAno').val()
+        };
+
+        abrirLoading();
+
+        $.ajax(
+        {
+            type: 'POST',
+            url: "@Url.Action("BuscarResumoMensalVendas", "Venda")",
+            data: parametro,
+            success: function (data) {
+
+                $("#ValorTotalEmVendas").val(data.ValorTotalEmVendas);
+                $("#ValorTotalEmPagamentosRecebidos").val(data.ValorTotalEmPagamentosRecebidos);
+                $("#ValorDasVendasAVista").val(data.ValorDasVendasAVista);
+                $("#ValorTotalDosPagsRecebidosAVista").val(data.ValorTotalDosPagsRecebidosAVista);
+
+
+                $("#ValorDosPagsRecebidosAVistaNoCartao").val(data.ValorDosPagsRecebidosAVistaNoCartao);
+                $("#ValorDosPagsRecebidosAVistaNoDinheiro").val(data.ValorDosPagsRecebidosAVistaNoDinheiro);
+                $("#ValorDosPagsRecebidosAVistaNoCheque").val(data.ValorDosPagsRecebidosAVistaNoCheque);
+
+
+                $("#ValorDasVendasAPrazo").val(data.ValorDasVendasAPrazo);
+                $("#ValorTotalEmPrestacoesRecebidas").val(data.ValorTotalEmPrestacoesRecebidas);
+                $("#ValorDasPrestacoesRecebidasNoCartao").val(data.ValorDasPrestacoesRecebidasNoCartao);
+                $("#ValorDasPrestacoesRecebidasNoDinheiro").val(data.ValorDasPrestacoesRecebidasNoDinheiro);
+                $("#ValorDasPrestacoesRecebidasNoCheque").val(data.ValorDasPrestacoesRecebidasNoCheque);
+
+                console.log(data);
+
+                fecharLoading();
+
+            },
+            error: function (error) {
+                alert(error);
+
+                fecharLoading();
+            }
+        });
+
+    }
+
+</script>
