--- a/ModeloAspNetMvc/Views/Caixa/FechamentoDiario.cshtml
+++ b/ModeloAspNetMvc/Views/Caixa/FechamentoDiario.cshtml
@@ -135,10 +135,10 @@
                                 @Html.DisplayFor(modelItem => item.Funcionario)
                             </td>
                             <td>
-                                <a href="javascript:void(0);" class="anchorEntradas" data-id="@item.Id">Entradas</a>
+                                <a href="javascript:void(0);" class="anchorEntradas" data-id="@item.DiaFechamento">Entradas</a>
                             </td>
                             <td>
-                                <a href="javascript:void(0);" class="anchorSaidas" data-id="@item.Id">Saídas</a>
+                                <a href="javascript:void(0);" class="anchorSaidas" data-id="@item.DiaFechamento">Saídas</a>
                             </td>
                         </tr>
                     }
@@ -182,13 +182,13 @@
             //debugger;
             $("#loadingDiv").show();
             var $buttonClicked = $(this);
-            var id = $buttonClicked.attr('data-id');
+            var dia = $buttonClicked.attr('data-id');
             var options = { "backdrop": "static", keyboard: true };
             $.ajax({
                 type: "GET",
                 url: urlExibirEntradas,
                 contentType: "application/json; charset=utf-8",
-                data: { "Id": id },
+                data: { "diaFechamento": dia },
                 datatype: "json",
                 success: function (data) {
                    // debugger;
@@ -213,13 +213,13 @@
             $("#loadingDiv").show();
 
             var $buttonClicked = $(this);
-            var id = $buttonClicked.attr('data-id');
+            var dia = $buttonClicked.attr('data-id');
             var options = { "backdrop": "static", keyboard: true };
             $.ajax({
                 type: "GET",
                 url: urlExibirSaidas,
                 contentType: "application/json; charset=utf-8",
-                data: { "Id": id },
+                data: { "diaFechamento": dia },
                 datatype: "json",
                 success: function (data) {
                    // debugger;
