--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -30,30 +30,7 @@
 <div class="mobile-menu-left-overlay"></div>
 
 <nav class="side-menu">
-    <ul class="side-menu-list">
-        @*<li class="purple with-sub">
-                <span>
-                    <i class="font-icon font-icon-edit"></i>
-                    <span class="lbl">Caixa</span>
-                </span>
-                <ul>
-                    <li><a href="~/Caixa/FechamentoDiario"><span class="lbl">Fechamento Diário</span></a></li>
-                </ul>
-            </li>*@
-
-        @*<li class="purple with-sub">
-                <span>
-                    <i class="font-icon font-icon-edit"></i>
-                    <span class="lbl">Venda</span>
-                </span>
-                <ul>
-                    <li><a href="~/Venda/BalancoMensal"><span class="lbl">Balanço Mensal</span></a></li>
-                </ul>
-                <ul>
-                    <li><a href="~/Venda/DebitosAReceber"><span class="lbl">Débitos a Receber</span></a></li>
-                </ul>
-            </li>*@
-
+    <ul class="side-menu-list">       
         <li class="purple with-sub">
             <a href="~/Venda/BalancoMensal">
                 <span class="lbl">
@@ -68,6 +45,15 @@
                 <span class="lbl">
                     <i class="font-icon font-icon-edit"></i>
                     <span class="lbl">Débitos a Receber</span>
+                </span>
+            </a>
+        </li>
+
+        <li class="purple with-sub">
+            <a href="~/Caixa/FechamentoDiario">
+                <span class="lbl">
+                    <i class="font-icon font-icon-edit"></i>
+                    <span class="lbl">Fechamento Diário</span>
                 </span>
             </a>
         </li>
