alterando titulo aplicacao

--- a/ModeloAspNetMvc/Views/Shared/_Layout.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Modelo AspNet MVC - @ViewBag.Title </title>
+	<title> Painel Com Fácil - @ViewBag.Title </title>
 	@Styles.Render("~/Content/cssBundle")
 	@Scripts.Render("~/bundles/jsBundle")
 
