ajustando layout e consulta de caixa

--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -35,7 +35,7 @@
             <a href="~/Venda/BalancoMensal">
                 <span class="lbl">
                     <i class="font-icon font-icon-edit"></i>
-                    <span class="lbl">Balanço Mensal</span>
+                    <span class="lbl">Balanço Mensal De Vendas</span>
                 </span>
             </a>
         </li>
@@ -43,7 +43,7 @@
         <li class="purple with-sub">
             <a href="~/Venda/DebitosAReceber">
                 <span class="lbl">
-                    <i class="font-icon font-icon-edit"></i>
+                    <i class="font-icon font-icon-plus"></i>
                     <span class="lbl">Débitos a Receber</span>
                 </span>
             </a>
@@ -52,8 +52,8 @@
         <li class="purple with-sub">
             <a href="~/Caixa/FechamentoDiario">
                 <span class="lbl">
-                    <i class="font-icon font-icon-edit"></i>
-                    <span class="lbl">Fechamento Diário</span>
+                    <i class="font-icon font-icon-box"></i>
+                    <span class="lbl">Caixa Diário</span>
                 </span>
             </a>
         </li>
