--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -52,7 +52,7 @@
         <li class="purple with-sub">
             <a href="~/Caixa/FechamentoDiario">
                 <span class="lbl">
-                    <i class="font-icon font-icon-box"></i>
+                    <i class="font-icon font-icon-editor-table"></i>
                     <span class="lbl">Caixa Diário</span>
                 </span>
             </a>
