--- a/ModeloAspNetMvc/Views/Venda/BalancoMensal.cshtml
+++ b/ModeloAspNetMvc/Views/Venda/BalancoMensal.cshtml
@@ -11,8 +11,7 @@
                 <h3>Vendas</h3>
                 <ol class="breadcrumb breadcrumb-simple">
                     <li><a href="#">ComFacil</a></li>
-                    <li><a href="#">Vendas</a></li>
-                    <li class="active">Balanço Mensal</li>
+                    <li class="active">Balanço Mensal De Vendas</li>
                 </ol>
             </div>
         </div>
