--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -6,6 +6,9 @@
         <button id="show-hide-sidebar-toggle" class="show-hide-sidebar">
             <span>toggle menu</span>
         </button>
+        <button class="hamburger hamburger--htla">
+            <span>toggle menu</span>
+        </button>
         <div class="site-header-content">
             <div class="site-header-content-in pull-right">
                 <div class="site-header-show">
@@ -13,49 +16,52 @@
                         <button class="dropdown-toggle" id="dd-user-menu" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img src="~/Content/img/avatar-2-64.png" alt="">
                         </button>
+
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd-user-menu">
-                            @*<a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-user"></span>Profile</a>
-                                <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-cog"></span>Settings</a>
-                                <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-question-sign"></span>Help</a>
-                                <div class="dropdown-divider"></div>*@
+                            <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-user"></span>Profile</a>
+                            <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-cog"></span>Settings</a>
+                            <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-question-sign"></span>Help</a>
+                            <div class="dropdown-divider"></div>
+
                             <a class="dropdown-item" href="/Account/LogOff"><span class="font-icon glyphicon glyphicon-log-out"></span>Logout</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 </header>
+
+
 
 <div class="mobile-menu-left-overlay"></div>
 
-<nav class="side-menu">
-    <ul class="side-menu-list">       
-        <li class="purple with-sub">
-            <a href="~/Venda/BalancoMensal">
-                <span class="lbl">
-                    <i class="font-icon font-icon-edit"></i>
-                    <span class="lbl">Balanço Mensal De Vendas</span>
-                </span>
-            </a>
-        </li>
+        <nav class="side-menu">
+            <ul class="side-menu-list">
+                <li class="purple with-sub">
+                    <a href="~/Venda/BalancoMensal">
+                        <span class="lbl">
+                            <i class="font-icon font-icon-edit"></i>
+                            <span class="lbl">Balanço Mensal De Vendas</span>
+                        </span>
+                    </a>
+                </li>
 
-        <li class="purple with-sub">
-            <a href="~/Venda/DebitosAReceber">
-                <span class="lbl">
-                    <i class="font-icon font-icon-plus"></i>
-                    <span class="lbl">Débitos a Receber</span>
-                </span>
-            </a>
-        </li>
+                <li class="purple with-sub">
+                    <a href="~/Venda/DebitosAReceber">
+                        <span class="lbl">
+                            <i class="font-icon font-icon-plus"></i>
+                            <span class="lbl">Débitos a Receber</span>
+                        </span>
+                    </a>
+                </li>
 
-        <li class="purple with-sub">
-            <a href="~/Caixa/FechamentoDiario">
-                <span class="lbl">
-                    <i class="font-icon font-icon-editor-table"></i>
-                    <span class="lbl">Caixa Diário</span>
-                </span>
-            </a>
-        </li>
-    </ul>
-</nav>
+                <li class="purple with-sub">
+                    <a href="~/Caixa/FechamentoDiario">
+                        <span class="lbl">
+                            <i class="font-icon font-icon-editor-table"></i>
+                            <span class="lbl">Caixa Diário</span>
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
