--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -18,12 +18,12 @@
                         </button>
 
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd-user-menu">
-                            <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-user"></span>Profile</a>
+                            @*<a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-user"></span>Profile</a>
                             <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-cog"></span>Settings</a>
                             <a class="dropdown-item" href="#"><span class="font-icon glyphicon glyphicon-question-sign"></span>Help</a>
-                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-divider"></div>*@
 
-                            <a class="dropdown-item" href="/Account/LogOff"><span class="font-icon glyphicon glyphicon-log-out"></span>Logout</a>
+                            <a class="dropdown-item" href="~/Login/LogOff"><span class="font-icon glyphicon glyphicon-log-out"></span>Sair</a>
                         </div>
                     </div>
                 </div>
@@ -49,8 +49,17 @@
                 <li class="purple with-sub">
                     <a href="~/Venda/DebitosAReceber">
                         <span class="lbl">
-                            <i class="font-icon font-icon-plus"></i>
+                            <i class="font-icon font-icon-cart-2"></i>
                             <span class="lbl">Débitos a Receber</span>
+                        </span>
+                    </a>
+                </li>
+
+                <li class="purple with-sub">
+                    <a href="~/Venda/VendasPorFuncionario">
+                        <span class="lbl">
+                            <i class="font-icon font-icon-card"></i>
+                            <span class="lbl">Vendas Por Funcionário</span>
                         </span>
                     </a>
                 </li>
