- adicionando autenticação basica - implementando relatório vendas por funcionario

--- a/ModeloAspNetMvc/Views/Login/Index.cshtml
+++ b/ModeloAspNetMvc/Views/Login/Index.cshtml
@@ -1,39 +1,54 @@
 ﻿
-@using ModeloAspNetMvc.Models.Login
-@model LoginViewModel
-@{
-    ViewBag.Title = "";
-}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Painel Com Fácil - @ViewBag.Title </title>
+    @Styles.Render("~/Content/cssBundle")
+    @Scripts.Render("~/bundles/jsBundle")
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Logar", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()                          
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Usuario, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Usuario, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Usuario, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Senha, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Senha, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Senha, "", new { @class = "text-danger" })
-                    </div>
-                </div>              
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Entrar" class="btn btn-default" />
-                    </div>
-                </div>
-            }
-        </section>
+</head>
+
+<body>
+    @using ModeloAspNetMvc.Models.Login
+    @model LoginViewModel
+    @{
+        ViewBag.Title = "";
+    }
+
+    <div class="page-center">
+        <div class="page-center-in">
+            <div class="container-fluid">
+                <section id="loginForm">
+                    @using (Html.BeginForm("Logar", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Usuario, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.TextBoxFor(m => m.Usuario, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Usuario, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Senha, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.Senha, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Senha, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Entrar" class="btn btn-default" />
+                            </div>
+                        </div>
+                    }
+                </section>
+            </div>
+        </div>
     </div>
-</div>
+</body>
+</html>
