--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -72,5 +72,18 @@
                         </span>
                     </a>
                 </li>
+
+                @*<li><a href="~/Cliente/Relatorio"><span class="lbl">Relatório de Clientes</span></a></li>
+                <li class="divider"></li>
+                <li><a href="~/Produto/Relatorio"><span class="lbl">Relatório de Produtos</span></a></li>*@
+
+                @*<li class="purple with-sub">
+            <a href="~/Venda/ResumoDePagamentosECaixa">
+                <span class="lbl">
+                    <i class="font-icon font-icon-editor-table"></i>
+                    <span class="lbl">Resumo de Pagamentos e Caixa</span>
+                </span>
+            </a>
+        </li>*@
             </ul>
         </nav>
