--- a/ModeloAspNetMvc/Views/Venda/VendasPorFuncionario.cshtml
+++ b/ModeloAspNetMvc/Views/Venda/VendasPorFuncionario.cshtml
@@ -21,125 +21,88 @@
 
 <section class="card box-block">
     <div class="card-block">
-        @using (Html.BeginForm("VendasPorFuncionario", "Venda", FormMethod.Get, new { @id = "formPesquisaVenda" }))
+        @using (Html.BeginForm("VendasPorFuncionario", "Venda", FormMethod.Post, new { @id = "formPesquisaVenda" }))
         {
-        <div class="row">
-            <div class="col-md-3">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DataInicio)
-                    @Html.TextBox("DataInicio", Model.DataInicio, new { @class = "form-control", @id = "DataInicio" })
+            <div class="row">
+                <div class="col-md-2">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.DataInicio)
+                        @Html.TextBox("DataInicio", Model.DataInicio, new { @class = "form-control", @id = "DataInicio" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.DataFim)
+                        @Html.TextBox("DataFim", Model.DataFim, new { @class = "form-control", @id = "DataFim" })
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.IdFuncionario)
+                        @Html.DropDownListFor(model => Model.IdFuncionario, Model.SelectListFuncionarios, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="col-md-4 text-right">
+                    <div class="form-group">
+                        <input type="submit" value="Consultar" class="btn btn-primary" />
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DataFim)
-                    @Html.TextBox("DataFim", Model.DataFim, new { @class = "form-control", @id = "DataFim" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.IdFuncionario)
-                    @Html.DropDownListFor(model => Model.IdFuncionario, Model.SelectListFuncionarios, new { @class = "form-control" })
-                </div>
-            </div>            
-            <div class="col-md-4 text-right">
-                <div class="form-group">
-                    <input type="submit" value="Consultar" class="btn btn-primary" />
-                </div>
-            </div>
-        </div>           
         }
     </div>
 
-    @*@if (Model.Fechamentos.Any())
+    @if (Model.ResumoDeVendas != null)
     {
-        <div class="card-block">
-            <div class="table-responsive">
-                <table class="table table-bordered">
-                    <tr class="table-info">
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().DiaFechamento)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().CaixaInicioDoDia)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().CaixaFinalDoDia)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().ValorEntrada)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().ValorDaSaida)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().Saldo)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().Status)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().ValorDaRetirada)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fechamentos.FirstOrDefault().Funcionario)
-                        </th>
-                        <th></th>
-                        <th></th>
-                    </tr>
+          
+     
+    <div class="card-block">
+        <div class="table-responsive" id="tabelaFuncionarios">
+            <table class="table table-bordered">
+                <tr class="table-info">
+                    <th>
+                        @Html.DisplayNameFor(model => model.ResumoDeVendas.First().Funcionario)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ResumoDeVendas.First().QtdVendas)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ResumoDeVendas.First().TotalEmVendas)
+                    </th>
+                </tr>
 
-                    @foreach (var item in Model.Fechamentos)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DiaFechamento)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CaixaInicioDoDia)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CaixaFinalDoDia)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ValorEntrada)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ValorDaSaida)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Saldo)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Status)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ValorDaRetirada)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Funcionario)
-                            </td>
-                            <td>
-                                <a href="javascript:void(0);" class="anchorEntradas" data-id="@item.DiaFechamento">Entradas</a>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0);" class="anchorSaidas" data-id="@item.DiaFechamento">Saídas</a>
-                            </td>
-                        </tr>
-                    }
-                </table>
-            </div>
-            <div class="pager">
-                @Html.PagedListPager((IPagedList)Model.Fechamentos, page => Url.Action("FechamentoDiario", new { page, Model.Mes, Model.Ano }))
-            </div>
+                @foreach (var item in Model.ResumoDeVendas)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Funcionario)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QtdVendas)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TotalEmVendas)
+                        </td>
+                    </tr>
+                }
+
+            </table>
         </div>
-    }*@
+        <div class="text-right" style="padding-top: 5px">
+            <input type="button" value="Imprimir" class="btn btn-secondary" onclick="PrintElem('tabelaFuncionarios')" />
+        </div>
+    </div>
+    }
 </section>
 
 
 <script type="text/javascript">
-    
 
-    $(function () {        
+
+    $(function () {
+
+        $("#formPesquisaVenda").submit(function (e) {
+            $("#loadingDiv").show();
+        });
 
         $('#DataInicio').datepicker({
             language: "pt-BR"
@@ -150,6 +113,25 @@
         });
 
     });
+    
+
+    function PrintElem(elem) {
+        var mywindow = window.open('', 'PRINT', 'height=400,width=600');
+
+        mywindow.document.write('<html><head><title>' + document.title + '</title>');
+        mywindow.document.write('</head><body >');
+        mywindow.document.write('<h1>' + document.title + '</h1>');
+        mywindow.document.write(document.getElementById(elem).innerHTML);
+        mywindow.document.write('</body></html>');
+
+        mywindow.document.close(); // necessary for IE >= 10
+        mywindow.focus(); // necessary for IE >= 10*/
+
+        mywindow.print();
+        mywindow.close();
+
+        return true;
+    }
 
 
 </script>
